# ytextract

./: .env  .gitmodules  Cargo.toml  LICENSE  README.md  bors.toml
.config/: nextest.toml
.github/: bors.toml  dependabot.yml  mergify.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/chglog/: RELEASE.tpl.md  release.yml
.github/workflows/: audit.yml  main.yml  publish.yml  test.yml
api/: get_video_info.http  guide.http  next.http  player.http  tv_config.http
api/browse/: channel.http  playlist.http
docs/: readme.md
docs/youtube-pages/: readme.md  watch-page.md
examples/: channel.rs  playlist.rs  related.rs  streams.rs  video.rs
src/: channel.rs  client.rs  error.rs  id.rs  lib.rs  player.rs  playlist.rs  stream.rs  thumbnail.rs  utils.rs  video.rs  youtube.rs
src/playlist/: test.rs  video.rs
src/stream/: audio.rs  common.rs  video.rs
src/video/: related.rs
src/youtube/: innertube.rs  next.rs  player_response.rs  tv_config.rs  video_info.rs  ytcfg.rs
src/youtube/browse/: continuation.rs  mod.rs  playlist.rs
src/youtube/browse/channel/: about.rs  mod.rs
tests/: channel.rs  playlist.rs  stream.rs  video.rs
