[package]
name = "ytextract"
version = "0.1.0"
authors = ["Tilmann Meyer <allescrafterx@gmail.com>", "YTExtract Contributers"]
edition = "2018"
description = "A Rust library for extracting various information from YouTube pages"
readme = true
repository = "https://github.com/ATiltedTree/ytextract/"
license = "MIT"
keywords = ["youtube", "youtube-dl", "youtube-downloader"]
categories = ["multimedia"]
include = ["LICENSE", "src", "Cargo.toml"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.24"
chrono = "0.4.19"
regex = "1.4.5"
once_cell = "1.7.2"

[dependencies.async-std]
version = "1.9.0"
features = ["tokio1", "attributes"]

[dependencies.reqwest]
version = "0.11.2"
features = ["cookies"]
