[package]
name = "ytextract"
version = "0.6.1"
edition = "2018"
description = "A library for getting YouTube metadata"
readme = "README.md"
repository = "https://github.com/ATiltedTree/ytextract/"
license = "MIT OR Apache-2.0"
keywords = ["youtube", "youtube-dl", "youtube-downloader"]
categories = ["multimedia"]
include = ["LICENSE-*", "src", "Cargo.toml", "README.md"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "1"
once_cell = "1"
serde_with = { version = "1", features = ["chrono"] }
log = "0.4"
bytes = "1"
futures-core = "0.3"
async-stream = "0.3"
lazy-regex = "2"
base64 = "0.13"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["std"]

[dependencies.reqwest]
version = "0.11"
features = ["stream", "json"]

[dev-dependencies]
futures = "0.3"

[dev-dependencies.async-std]
version = "1"
features = ["attributes", "tokio1"]
